[gd_scene load_steps=30 format=3 uid="uid://demo_jungle_level_001"]

[ext_resource type="PackedScene" uid="uid://bpajyqx8a2u1u" path="res://objects/player.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="2"]
[ext_resource type="Script" path="res://scripts/view.gd" id="3"]
[ext_resource type="Script" path="res://scripts/main.gd" id="4"]
[ext_resource type="PackedScene" path="res://scenes/main-environment.tres" id="5"]
[ext_resource type="PackedScene" uid="uid://enemy001" path="res://objects/enemy.tscn" id="6"]

[sub_resource type="BoxMesh" id="BoxMesh_platform"]
size = Vector3(4, 0.5, 4)

[sub_resource type="BoxShape3D" id="BoxShape_platform"]
size = Vector3(4, 0.5, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_platform"]
albedo_color = Color(0.4, 0.8, 0.3, 1)

[node name="Main" type="Node3D"]
script = ExtResource("4")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 5, 10, 0)
light_color = Color(1, 0.95, 0.85, 1)
light_energy = 1.2
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Enemy" parent="." instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, -3)

[node name="View" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 10)
script = ExtResource("3")

[node name="Camera" type="Camera3D" parent="View"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
fov = 50.0

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Platforms" type="Node3D" parent="."]

[node name="StartPlatform" type="StaticBody3D" parent="Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platforms/StartPlatform"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_platform")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platforms/StartPlatform"]
shape = SubResource("BoxShape_platform")

[node name="Platform2" type="StaticBody3D" parent="Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platforms/Platform2"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_platform")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platforms/Platform2"]
shape = SubResource("BoxShape_platform")

[node name="Platform3" type="StaticBody3D" parent="Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, -6)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platforms/Platform3"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_platform")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platforms/Platform3"]
shape = SubResource("BoxShape_platform")

[node name="Platform4" type="StaticBody3D" parent="Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 2, -9)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platforms/Platform4"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_platform")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platforms/Platform4"]
shape = SubResource("BoxShape_platform")

[node name="Platform5" type="StaticBody3D" parent="Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 3, -5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platforms/Platform5"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_platform")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platforms/Platform5"]
shape = SubResource("BoxShape_platform")

[node name="Collectibles" type="Node3D" parent="."]

[node name="FruitSpawner" type="Node3D" parent="."]
script = SubResource("GDScript_fruit_spawner")

[node name="Crates" type="Node3D" parent="."]

[node name="CrateSpawner" type="Node3D" parent="."]
script = SubResource("GDScript_crate_spawner")

[node name="Environment" type="Node3D" parent="."]

[node name="JungleSpawner" type="Node3D" parent="."]
script = SubResource("GDScript_jungle_spawner")

[sub_resource type="GDScript" id="GDScript_fruit_spawner"]
script/source = "extends Node3D
## Spawns fruit collectibles throughout the level

const FRUIT_SCENE = preload(\"res://objects/coin.tscn\")  # Will use coin scene for now

var fruit_positions = [
	Vector3(2, 1.5, 0),
	Vector3(4, 1.5, 0),
	Vector3(6, 1.5, -3),
	Vector3(8, 1.5, -3),
	Vector3(12, 2.5, -6),
	Vector3(14, 2.5, -6),
	Vector3(16, 3.5, -9),
	Vector3(18, 3.5, -9),
	Vector3(22, 4.5, -5),
	Vector3(24, 4.5, -5),
	Vector3(3, 1.5, -1),
	Vector3(7, 1.5, -4),
	Vector3(11, 2.5, -7),
	Vector3(17, 3.5, -8),
	Vector3(23, 4.5, -6),
]

func _ready():
	spawn_fruits()

func spawn_fruits():
	for pos in fruit_positions:
		var fruit = FRUIT_SCENE.instantiate()
		fruit.position = pos
		get_parent().get_node(\"Collectibles\").add_child(fruit)
		print(\"ðŸŽ Spawned fruit at \", pos)
"

[sub_resource type="GDScript" id="GDScript_crate_spawner"]
script/source = "extends Node3D
## Spawns breakable crates

@export var crate_model_path = \"res://models/obstacles/crate.glb\"

var crate_positions = [
	Vector3(3, 0.5, -1),
	Vector3(8, 1.5, -6),
	Vector3(13, 2.5, -9),
	Vector3(18, 3.5, -7),
	Vector3(22, 4.5, -3),
]

func _ready():
	spawn_crates()

func spawn_crates():
	for pos in crate_positions:
		var crate = create_crate()
		crate.position = pos
		get_parent().get_node(\"Crates\").add_child(crate)
		print(\"ðŸ“¦ Spawned crate at \", pos)

func create_crate() -> StaticBody3D:
	var crate = StaticBody3D.new()

	# Load crate model
	var mesh_inst = MeshInstance3D.new()
	if ResourceLoader.exists(crate_model_path):
		var scene = load(crate_model_path)
		if scene is PackedScene:
			var model = scene.instantiate()
			mesh_inst.add_child(model)
		else:
			mesh_inst.mesh = scene
	else:
		# Fallback: create simple box
		var box_mesh = BoxMesh.new()
		box_mesh.size = Vector3(1, 1, 1)
		mesh_inst.mesh = box_mesh

	crate.add_child(mesh_inst)

	# Add collision
	var collision = CollisionShape3D.new()
	var box_shape = BoxShape3D.new()
	box_shape.size = Vector3(1, 1, 1)
	collision.shape = box_shape
	crate.add_child(collision)

	# Attach script
	var script = load(\"res://scripts/crate.gd\")
	if script:
		crate.set_script(script)

	return crate
"

[sub_resource type="GDScript" id="GDScript_jungle_spawner"]
script/source = "extends Node3D
## Spawns jungle environment decorations

var tree_positions = [
	{\"pos\": Vector3(-3, 0, 2), \"model\": \"res://models/environment/jungle/tree_palm.glb\"},
	{\"pos\": Vector3(7, 0, -8), \"model\": \"res://models/environment/jungle/tree_oak.glb\"},
	{\"pos\": Vector3(-5, 0, -5), \"model\": \"res://models/environment/jungle/tree_default.glb\"},
	{\"pos\": Vector3(12, 0, 3), \"model\": \"res://models/environment/jungle/tree_palm.glb\"},
	{\"pos\": Vector3(25, 0, -8), \"model\": \"res://models/environment/jungle/tree_oak.glb\"},
]

var rock_positions = [
	{\"pos\": Vector3(-2, 0, -2), \"model\": \"res://models/environment/jungle/rock_largeA.glb\", \"scale\": 1.5},
	{\"pos\": Vector3(4, 0, 2), \"model\": \"res://models/environment/jungle/rock_largeB.glb\", \"scale\": 1.2},
	{\"pos\": Vector3(10, 0, -10), \"model\": \"res://models/environment/jungle/rock_smallA.glb\", \"scale\": 0.8},
	{\"pos\": Vector3(16, 0, -3), \"model\": \"res://models/environment/jungle/rock_largeC.glb\", \"scale\": 1.3},
	{\"pos\": Vector3(23, 0, -10), \"model\": \"res://models/environment/jungle/rock_smallB.glb\", \"scale\": 0.9},
]

var plant_positions = [
	{\"pos\": Vector3(1, 0, 1), \"model\": \"res://models/environment/jungle/flower_redA.glb\"},
	{\"pos\": Vector3(6, 0, -1), \"model\": \"res://models/environment/jungle/flower_yellowB.glb\"},
	{\"pos\": Vector3(9, 0, -4), \"model\": \"res://models/environment/jungle/grass_large.glb\"},
	{\"pos\": Vector3(14, 0, -8), \"model\": \"res://models/environment/jungle/mushroom_red.glb\"},
	{\"pos\": Vector3(19, 0, -6), \"model\": \"res://models/environment/jungle/plant_bush.glb\"},
	{\"pos\": Vector3(21, 0, -2), \"model\": \"res://models/environment/jungle/flower_purpleA.glb\"},
]

func _ready():
	spawn_environment()

func spawn_environment():
	# Spawn trees
	for tree_data in tree_positions:
		spawn_decoration(tree_data, 2.0)

	# Spawn rocks
	for rock_data in rock_positions:
		var scale = rock_data.get(\"scale\", 1.0)
		spawn_decoration(rock_data, scale)

	# Spawn plants
	for plant_data in plant_positions:
		spawn_decoration(plant_data, 1.0)

func spawn_decoration(data: Dictionary, default_scale: float = 1.0):
	var mesh_inst = MeshInstance3D.new()
	mesh_inst.position = data[\"pos\"]

	var model_path = data[\"model\"]
	if ResourceLoader.exists(model_path):
		var scene = load(model_path)
		if scene is PackedScene:
			var model = scene.instantiate()
			mesh_inst.add_child(model)
		elif scene is Mesh:
			mesh_inst.mesh = scene

	var scale_val = data.get(\"scale\", default_scale)
	mesh_inst.scale = Vector3(scale_val, scale_val, scale_val)

	get_parent().get_node(\"Environment\").add_child(mesh_inst)
	print(\"ðŸŒ´ Spawned decoration: \", model_path.get_file(), \" at \", data[\"pos\"])
"

[connection signal="coin_collected" from="Player" to="HUD" method="_on_coin_collected"]
